# KeyManagement

./: .gitignore  CMakeLists.txt  DBFactoryInterface.cpp  DBProductInterface.cpp  DBProductInterface.h  DataStructure.cpp  DataStructure.h  HardwareFactoryInterface.cpp  HardwareProductInterface.cpp  HardwareProductInterface.h  MysqlDB.cpp  MysqlDB.h  MysqlFactory.h  README.md  SJK1238.cpp  SJK1238.h  SJK1238Factory.cpp  SJK1238Factory.h  main.cpp
KeyManagement-test-client/: CMakeLists.txt  main.cpp
config/: MasterKey  keymanagement.conf
doc/: 密钥管理系统—软件设计说明书(未完成).docx  密钥管理系统—需求规格说明书.docx
src/: CMakeLists.txt  Config.cpp  Config.h  Key.cpp  Key.h  config.h.in  global_define.h.in  main.cpp
src/config/: CMakeLists.txt  Config.cpp  Config.h  ConfigSingleton.cpp  ConfigSingleton.h
src/database/: CMakeLists.txt  DBFactoryInterface.cpp  DBFactoryInterface.h  DBProductInterface.cpp  DBProductInterface.h  Key.cpp  Key.h  MysqlDB.cpp
src/database/mysql/: MysqlDB.cpp  MysqlDB.h  MysqlFactory.cpp  MysqlFactory.h
src/encryption_device/: CMakeLists.txt  EncryptionDeviceFactoryInterface.cpp  EncryptionDeviceFactoryInterface.h  EncryptionDeviceProductInterface.cpp  EncryptionDeviceProductInterface.h
src/encryption_device/simulation/: CMakeLists.txt  MasterKey.pub  Simulation.cpp  Simulation.h  SimulationFactory.cpp  SimulationFactory.h
src/encryption_device/sjk1238/: GetPublicKey.cpp  GetPublicKey.h  SJK1238.cpp  SJK1238.h  SJK1238Factory.cpp  SJK1238Factory.h  server_authen.cpp
src/global/: CMakeLists.txt  Key.cpp  Key.h  Logger.cpp  Logger.h  LoggerServer.cpp  LoggerServer.h
src/handler/: AuthenticationHandler.cpp  AuthenticationHandler.h  CMakeLists.txt  KeyHandler.cpp  KeyHandler.h
src/handler/usb_key/: CMakeLists.txt  CmakeLists.txt  SKF.h  Signature.cpp  Signature.h  base_type.h  server_authen.cpp  server_authen.h  skf_type.h
src/hardware/: CMakeLists.txt  HardwareFactoryInterface.cpp  HardwareFactoryInterface.h  HardwareProductInterface.cpp  HardwareProductInterface.h
src/hardware/simulation/: CMakeLists.txt  Simulation.cpp  Simulation.h  SimulationFactory.cpp  SimulationFactory.h
src/hardware/sjk1238/: CMakeLists.txt  SJK1238.cpp  SJK1238.h  SJK1238Factory.cpp  SJK1238Factory.h
src/keymanagement-init/: CMakeLists.txt  main.cpp
src/keymanagement-loglevel/: CMakeLists.txt  main.cpp
src/keymanagement-test-client/: CMakeLists.txt  DataPacket.h  Reply.cpp  Reply.h  ServerAuthen.cpp  ServerAuthen.h  Signature.cpp  Signature.h  base_type.h  cert.cer  data.signed  main.cpp
src/tcp/: CMakeLists.txt  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  DataPacket.h  Reply.cpp  Reply.h  Request.cpp  Request.h  RequestHandler.cpp  RequestHandler.h  RequestParser.cpp  RequestParser.h  Server.cpp  Server.h  ThreadTask.cpp  ThreadTask.h  connection.cpp  connection.h  connection_manager.cpp  connection_manager.h  header.h  mime_types.cpp  mime_types.h  reply.cpp  reply.h  request.h  request_handler.cpp  request_handler.h  request_parser.cpp  request_parser.h  server.cpp  server.h
src/usb_key/: Signature.cpp  Signature.h  server_authen.cpp  server_authen.h
